refactor: resolve sonar findings across backend and frontend