@@ -13,7 +13,6 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -27,7 +26,7 @@ public class CharacterPersistenceAdapter implements CharacterRepository {
     public List<CharacterDomain> findAll() {
         return jpaCharacterRepository.findAll().stream()
                 .map(CharacterPersistenceMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
